# Data-Science-Coursework

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt  test.ipynb
Classes Resources/CD-05-Numpy/: CD_05_Parte1_ArreglosNumpy.ipynb  CD_05_Parte2_EstadisticaDescriptivaNumpy.ipynb  CD_05_Tarea_Nombre_Apellido.ipynb
Classes Resources/CD_02_CasoDeEstudio-EscuelasJalisco/: CD_02_Funciones-Basicas-Python _EscuelasJalisco.ipynb
Classes Resources/CD_03_ConjuntosBasicosPython/: CD_03A_Strings.ipynb  CD_03B_Listas.ipynb  CD_03_TAREA_NOMBE_APELLIDO.ipynb  comando_limit.txt
Classes Resources/CD_04_Diccionarios/: CD_04_Parte1-Diccionarios.ipynb  CD_04_Parte2_ArchivosJSON.ipynb  CD_04_PrimerProyecto_NOMBRE_APELLIDO.ipynb  CD_04_Tarea_NOMBRE_APELLIDO.ipynb  datos_credito.json
Classes Resources/CD_05_Numpy/: CD_05_Parte1_ArreglosNumpy.ipynb  CD_05_Parte2_EstadisticaDescriptivaNumpy.ipynb  CD_05_Tarea_Carlos_Chavarria.ipynb
Classes Resources/CD_06_Pandas/: 1-SeriesYDataFrames.ipynb  2-Indexación-Selección.ipynb  3-Operaciones-Agregaciones.ipynb  CD_06_TAREA_Nombre-Apellido.ipynb
Classes Resources/CD_07_Pandas_Concat-DatosFaltantes/: CD_07_Parte1_Concat-Merge.ipynb  CD_07_Parte2_DatosFaltantes_Nombre-Apellido.ipynb  CD_07_Tarea -CarlosChavarria.ipynb  CD_07_Tarea -NombreApellido.ipynb
Classes Resources/CD_08_Ordenando-Agrupando/: CD_08_Parte1_Ordenando-ValoresUnicos.ipynb  CD_08_Parte2_AgrupandoDatos.ipynb  CD_08_Parte3_CasoDeEstudio-JugadoresNBA.ipynb  CD_08_Tarea_IncendiosMexico_Carlos-Chavarria.ipynb  CD_08_Tarea_IncendiosMexico_Nombre-Apellido.ipynb
(+55 files in other folders)
